amm/pool-server/amm-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-amm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    
  name: amm-server-ingress
spec:
  rules:
  - host: apigliaswap.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: amm-server-svc
          servicePort: 80
